tests/paczka1/fuzzy1/66274759.err
Error in line 3: ucl9Us A991 65,0
Error in line 8: usRNr A991 82,0
Error in line 11: 54OVfXMD A991 63,1
Error in line 10: usRNr S272 89,0
Error in line 17: vZAa A991 7u,1
Error in line 18: vZAa S272 92,2
Error in line 20: ucl9Us A853 47,9
Error in line 28: Bna A991 85,65
Error in line 26: Bna A853 9,9
Error in line 35: 54OVfXMD AI53 154,3
Error in line 27: 54OVfXMD A853 49,3
Error in line 37: S272 A991 31,2
